--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,12 @@
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+/* @import './base.css'; */
+
 html,
 body {
   padding: 0;
