--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,18 +1,16 @@
-/* @tailwind base;
-@tailwind components;
-@tailwind utilities; */
-
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
-/* @import './base.css'; */
 
-html,
-body {
+html,body {
   padding: 0;
   margin: 0;
   font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+html {
+  font-size: 16px;
 }
 
 a {
@@ -29,10 +27,7 @@ img {
   height: auto;
 }
 
-h1,
-h2,
-p,
-ul {
+h1,h2,p,ul {
   margin: 0;
 }
 
@@ -53,7 +48,21 @@ h1 {
 }
 
 h2 {
+  /* 3xl */
+  font-size: 1.875rem;
+  font-weight: 600;
+  line-height: 1.2;
+}
+
+h3 { 
+  /* 2xl */
   font-size: 1.5rem;
+  font-weight: 600;
+  line-height: 1.2;
+}
+
+h6 {
+  font-size: 1.875rem;
   font-weight: 600;
   line-height: 1.2;
 }
@@ -62,10 +71,4 @@ p {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-}
-
-title {
-  font-size: 1.5rem;
-  font-weight: 600;
-  line-height: 1.2;
 }
